@@ -642,6 +642,7 @@ class SmartsSelection(Selection):
             val = tokens.popleft()
             pattern.append(val)
         self.pattern = "".join(pattern)
+        self.rdkit_kwargs = parser.rdkit_kwargs
 
     def _apply(self, group):
         try:
@@ -654,7 +655,7 @@ class SmartsSelection(Selection):
         pattern = Chem.MolFromSmarts(self.pattern)
         if not pattern:
             raise ValueError(f"{self.pattern!r} is not a valid SMARTS query")
-        mol = group.convert_to("RDKIT")
+        mol = group.convert_to("RDKIT", **self.rdkit_kwargs)
         matches = mol.GetSubstructMatches(pattern, useChirality=True)
         # convert rdkit indices to mdanalysis'
         indices = [
@@ -1387,7 +1388,7 @@ class SelectionParser(object):
                 "".format(self.tokens[0], token))
 
     def parse(self, selectstr, selgroups, periodic=None, atol=1e-08,
-              rtol=1e-05, sorted=True):
+              rtol=1e-05, sorted=True, rdkit_kwargs=None):
         """Create a Selection object from a string.
 
         Parameters
@@ -1407,6 +1408,9 @@ class SelectionParser(object):
             Passed to :func:`numpy.isclose`.
         sorted : bool, optional
             Whether to sorted the output AtomGroup.
+        rdkit_kwargs : dict, optional
+            Arguments passed to the RDKitConverter when using selection based
+            on SMARTS queries
 
 
         Returns
@@ -1421,12 +1425,14 @@ class SelectionParser(object):
 
 
         .. versionchanged:: 2.0.0
-            Added `atol` and `rtol` keywords to select float values.
+            Added `atol` and `rtol` keywords to select float values. Added
+            `rdkit_kwargs` to pass arguments to the RDKitConverter
         """
         self.periodic = periodic
         self.atol = atol
         self.rtol = rtol
         self.sorted = sorted
+        self.rdkit_kwargs = rdkit_kwargs or {}
 
         self.selectstr = selectstr
         self.selgroups = selgroups
