@@ -575,6 +575,11 @@ class TestSelectionRDKit(object):
         with pytest.raises(ValueError, match="not a valid SMARTS"):
             u2.select_atoms("smarts foo")
 
+    def test_passing_args_to_converter(self):
+        u = mda.Universe.from_smiles("O=C=O")
+        sel = u.select_atoms("smarts [$(O=C)]", rdkit_kwargs=dict(force=True))
+        assert sel.n_atoms == 2
+
 
 class TestSelectionsNucleicAcids(object):
     @pytest.fixture(scope='class')
