@@ -23,6 +23,8 @@ The rules for this file:
   * 2.0.0
 
 Fixes
+  * Added an `rdkit_kwargs` parameter to pass arguments to the RDKitConverter
+    from the `select_atoms` method (Issue #3319, PR #3324)
   * Fixes AtomGroup.unique, ResidueGroup.unique, SegmentGroup.unique not
     sorting the output atoms. The returned group is now always a copy.
     (Issue #3364, Issue #2977, PR #3368)
